# registro-bet

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml  sonar-project.properties
backend/: .env.example  build.sh  conftest.py  pyproject.toml  requirements.txt
backend/config/: settings.py
backend/src/api/: urls.py
backend/src/apps/audit/: admin.py  apps.py  models.py
backend/src/apps/audit/application/use_cases/: get_admin_stats.py  list_audit_logs.py  log_event.py
backend/src/apps/audit/domain/entities/: audit_log.py
backend/src/apps/audit/domain/repositories/: audit_log_repository.py
backend/src/apps/audit/domain/services/: audit_service.py
backend/src/apps/audit/infrastructure/mappers/: audit_log_mapper.py
backend/src/apps/audit/infrastructure/models/: audit_log_model.py
backend/src/apps/audit/infrastructure/repositories/: django_audit_log_repository.py
backend/src/apps/audit/infrastructure/services/: default_audit_service.py
backend/src/apps/audit/migrations/: 0001_initial.py
backend/src/apps/audit/presentation/: urls.py
backend/src/apps/audit/presentation/serializers/: admin_stats_serializer.py  audit_log_serializer.py
backend/src/apps/audit/presentation/views/: admin_stats_view.py  audit_log_views.py
backend/src/apps/audit/tests/application/: test_audit_integration.py  test_get_admin_stats.py  test_list_audit_logs.py  test_log_event.py
backend/src/apps/audit/tests/domain/: test_audit_log.py
backend/src/apps/audit/tests/integration/: test_admin_audit_preferences_flow.py
backend/src/apps/bets/: admin.py  apps.py
backend/src/apps/bets/application/use_cases/: change_bet_status.py  create_bet.py  create_bet_category.py  create_sport.py  delete_bet.py  get_bet.py  get_bet_history.py  get_daily_balance.py  get_total_balance.py  list_bet_categories.py  list_bet_statuses.py  list_sports.py  list_user_bets.py  seed_bet_statuses.py  update_bet.py  update_bet_category.py  update_sport.py
backend/src/apps/bets/domain/: exceptions.py
backend/src/apps/bets/domain/entities/: bet.py  bet_category.py  bet_status.py  sport.py
backend/src/apps/bets/domain/repositories/: bet_category_repository.py  bet_repository.py  bet_status_repository.py  sport_repository.py
backend/src/apps/bets/domain/services/: balance_calculator.py  tz_utils.py
backend/src/apps/bets/domain/value_objects/: balance.py  money.py  odds.py
backend/src/apps/bets/infrastructure/mappers/: bet_category_mapper.py  bet_mapper.py  bet_status_mapper.py  sport_mapper.py
backend/src/apps/bets/infrastructure/models/: __init__.py  bet_category_model.py  bet_model.py  bet_status_model.py  sport_model.py
backend/src/apps/bets/infrastructure/repositories/: django_bet_category_repository.py  django_bet_repository.py  django_bet_status_repository.py  django_sport_repository.py
backend/src/apps/bets/management/commands/: seed_bet_statuses.py
backend/src/apps/bets/migrations/: 0001_initial.py  0002_betmodel.py  0003_add_freebet_boosted_fields.py
backend/src/apps/bets/presentation/: urls.py
backend/src/apps/bets/presentation/serializers/: balance_serializer.py  bet_category_serializer.py  bet_serializer.py  bet_status_serializer.py  sport_serializer.py
backend/src/apps/bets/presentation/views/: balance_views.py  bet_category_views.py  bet_status_views.py  bet_views.py  sport_views.py
backend/src/apps/bets/tests/application/: test_change_bet_status.py  test_create_bet.py  test_create_bet_category.py  test_create_sport.py  test_delete_bet.py  test_get_bet.py  test_get_bet_history.py  test_get_daily_balance.py  test_get_total_balance.py  test_list_bet_categories.py  test_list_bet_statuses.py  test_list_sports.py  test_list_user_bets.py  test_seed_bet_statuses.py  test_update_bet.py  test_update_bet_category.py  test_update_sport.py
backend/src/apps/bets/tests/domain/: test_balance.py  test_balance_calculator.py  test_bet.py  test_bet_category.py  test_bet_status.py  test_money.py  test_odds.py  test_sport.py
backend/src/apps/bets/tests/integration/: test_balance_history_flow.py  test_bet_crud_flow.py  test_catalog_flow.py
backend/src/apps/users/: apps.py  models.py
backend/src/apps/users/domain/: exceptions.py
backend/src/apps/users/domain/entities/: user.py  (+2 more)
backend/src/apps/users/migrations/: 0001_initial.py  0002_authsessionmodel.py  0003_rename_exprires_at_authsessionmodel_expires_at.py  0004_emailverificationmodel.py  0005_usermodel_theme_preference_usermodel_timezone.py  0006_normalize_emails_to_lowercase.py
backend/src/apps/users/presentation/: urls.py
backend/src/config/: asgi.py  settings.py  urls.py
(+137 files in other folders)
