[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.29.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.11.0",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "ruff>=0.15.0",
]

# ─── Configuración de cobertura (pytest-cov) ──────────────
[tool.coverage.run]
# Qué código medir (solo tu código, no librerías)
source = ["src"]
# Ignorar archivos que no son lógica de negocio
omit = [
    "*/migrations/*",
    "*/config/*",
    "*/manage.py",
    "*/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
# Mostrar líneas no cubiertas en el reporte de terminal
show_missing = true
# Fallar si la cobertura baja de este % (opcional, útil en CI)
# fail_under = 80
